# simple-bson

./: .gitignore  README.rst  pyproject.toml  setup.cfg
.github/workflows/: CI.yml  publish-main.yml  publish-test.yml  python-package.yml
simple_bson/: __init__.py  decoder.py  encoder.py  etc.py
tests/: test_array.py  test_bool.py  test_bytes.py  test_dict.py  test_float.py  test_int.py
