[tool.poetry]
name = "simple-bson"
version = "0.0.3"
description = "Python Bson Compatible Library"
authors = [
    "DeltaLaboratory <delta@deltalab.dev>"
]
packages = [
    { include = "simple_bson" },
]

readme = "README.rst"
repository = "https://github.com/DeltaLaboratory/simple-bson"
homepage = "https://github.com/DeltaLaboratory/simple-bson"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pymongo = "^3.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"