[metadata]
name = simple-bson
version = 0.0.1
author = DeltaLaboratory
author_email = delta@deltalab.dev
description = a simple and lightweight bson implementation
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/DeltaLaboratory/simple-bson
project_urls =
    Bug Tracker = https://github.com/DeltaLaboratory/simple-bson/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: Stackless
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
package_dir =
    = simple_bson
packages = find:
python_requires = >=3.7

[options.packages.find]
where = simple_bson